2004-07-03    <bilboed@localhost>

	* src/pitivi-project.c (pitivi_project_set_source_element) 
	(pitivi_project_blank_source, pitivi_project_set_video_output) 
	(pitivi_project_set_audio_output):
	Functions to properly modify the project's pipeline

2004-07-02    <bilboed@localhost>

	* src/pitivi-project.h (struct _PitiviProject): Added pipeline and timeline property

2004-07-01    <bilboed@localhost>

	* configure.ac: Updated minimum gstreamer version to 0.8.2

2004-06-29    <bilboed@localhost>

	* src/pitivi-mainapp.c (pitivi_mainapp_activate_effectswindow): function to (de)activate the PitiviEffectsWindow

	* ui/pitivi-toolbox.xml:
	* src/pitivi-toolboxwindow.c (pitivi_toolboxwindow_cb_effectswindow_toggle): 
	Added Windows Menu to PitiviToolboxWindow with callback

	* src/pitivi-projectsettings.c (pitivi_projectsettings_media_new): removed bad codec_settings list initialisation

2004-06-28    <bilboed@localhost>

	* src/pitivi-settings.c (pitivi_settings_ajout_factory_element): modification to support priority elements (after loading from file)

	* src/pitivi-projectsettings.c (pitivi_projectsettings_copy): protection against NULL copying

	* src/pitivi-settings.c (pitivi_settings_scan_registry): function to scan the GstRegistry for containers/codecs/parsers and fill the PitiviSettings
	(pitivi_settings_load_from_file, pitivi_settings_save_to_file): Functions to load/save PitiviSettings from/to file

2004-06-26    <bilboed@localhost>

	* src/pitivi-projectsettings.c (pitivi_projectsettings_copy): function to make copies of PitiviProjectSettings

	* src/pitivi-timelinewindow.c: Activated 'Save' and 'SaveAs' menuitems

	* src/pitivi-project.h (struct _PitiviProject): added filename property

	* configure.ac: Added check for libxml-2.0

	* src/pitivi-project.c (pitivi_project_new_from_file): New function to create a PitiviProject from a file
	(pitivi_project_save_to_file): Function to save a project to file
