@@ -1,3 +1,7 @@
+2004-07-05    <bilboed@bilboed.eptv>
+
+	* src/pitivi-sourcelistwindow.c: Added real drag-and-drop functions, now sends the PitiviSourceFile*
+
 2004-07-03    <bilboed@localhost>
 
 	* src/pitivi-project.c (pitivi_project_set_source_element) 
